--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Photo Editor - Edit your images online</title>
+    <title>Photo Editor - Edit your Images online</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
@@ -35,10 +35,8 @@
 
                 </ul>
                 <div class="d-flex" role="search">
-                    <button class="btn btn-outline-success mx-1" type="submit">Login</button>
-                    <button class="btn btn-outline-success mx-1" type="submit">Signup</button>
-                    <button type="button" class="btn btn-primary" onclick="redirectToLogin()">Login</button>
-
+                    <a href="login.html" class="btn btn-outline-success mx-1">Login</a>
+                    <a href="signup.html" class="btn btn-outline-success mx-1" >Signup</a>
                 </div>
             </div>
         </div>
@@ -74,7 +72,7 @@
 
     <div class="container my-4">
 
-        <h1 class="fs-2 text">Photo Editor - Edit your app online</h1>
+        <h1 class="fs-2 text">Photo Editor - Edit Your Images Online</h1>
 
         <form action="/edit" method="post" enctype="multipart/form-data">
 
@@ -97,32 +95,29 @@
             </div>
             <button type="submit" name="action" value="convert" class="btn btn-success">Convert</button>
             <button type="submit" name="action" value="crop_face" class="btn btn-success">Crop Face</button>
-            <button id="feature" type="submit" name="action" value="read_text" class="btn btn-success" data-toggle="modal" data-target="#firstLoginModal">
+            <button id="feature" type="button" name="action" value="read_text" class="btn btn-success" data-toggle="modal" data-target="#firstLoginModal">
                 Read Text
             </button>
+            <div class="modal fade" id="firstLoginModal" tabindex="-1" role="dialog" aria-labelledby="firstLoginModalLabel" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="firstLoginModalLabel">Login Required</h5>
+                    <button id="closePopup" type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                    <p>This feature requires you to be logged in. Please sign in or create an account to use it.</p>
+                  </div>
+                  <div class="modal-footer">
+                    <a href="login.html" class="btn btn-primary">Login</a>
+                    <a href="signup.html" class="btn btn-secondary">Create Account</a>
+                  </div>
+                </div>
+              </div>
+            </div>
         </form>
-
-
-        <div class="modal fade" id="firstLoginModal" tabindex="-1" role="dialog" aria-labelledby="firstLoginModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="firstLoginModalLabel">Login Required</h5>
-        <button id="closepopup" type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <p>This feature requires you to be logged in. Please sign in or create an account to use it.</p>
-      </div>
-      <div class="modal-footer">
-        <a href="login.html" class="btn btn-primary">Login</a>
-        <a href="signup.html" class="btn btn-secondary">Create Account</a>
-      </div>
-    </div>
-  </div>
-</div>
-    </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
@@ -132,14 +127,12 @@
         function redirectToLogin() {
             window.location.href = "login.html"; // Replace "login.html" with your actual login page URL
         }
-
-        document.getElementById("closepopup").addEventListener("click", function() {
-            $("#firstLoginModal").modal('hide');
-        });
-
         document.getElementById("feature").addEventListener("click", function() {
             $("#firstLoginModal").modal("show");
-          });
+        });
+        document.getElementById("closePopup").addEventListener("click", function() {
+            $("#firstLoginModal").modal("hide");
+        });
     </script>
 </body>
 
