--- a/templates/index.html
+++ b/templates/index.html
@@ -34,10 +34,17 @@
                     </li>
 
                 </ul>
+                {% if isLogged==False %}
                 <div class="d-flex" role="search">
-                    <a href="login.html" class="btn btn-outline-success mx-1">Login</a>
+                    <a href="{{ url_for('login') }}" class="btn btn-outline-success mx-1">Login</a>
                     <a href="signup.html" class="btn btn-outline-success mx-1" >Signup</a>
                 </div>
+                {% endif %}
+                {% if isLogged==True %}
+                <div class="d-flex" role="search">
+                    <h4>Hello, {{ username }}</h4>
+                </div>
+                {% endif %}
             </div>
         </div>
     </nav>
@@ -95,16 +102,18 @@
             </div>
             <button type="submit" name="action" value="convert" class="btn btn-success">Convert</button>
             <button type="submit" name="action" value="crop_face" class="btn btn-success">Crop Face</button>
-            <button id="feature" type="button" name="action" value="read_text" class="btn btn-success" data-toggle="modal" data-target="#firstLoginModal">
+            <button id="feature" type="submit" name="action" value="read_text" class="btn btn-success" data-toggle="modal" data-target="#firstLoginModal">
                 Read Text
             </button>
-            <div class="modal fade" id="firstLoginModal" tabindex="-1" role="dialog" aria-labelledby="firstLoginModalLabel" aria-hidden="true">
+            {% if show_predictions_modal %}
+            <div class="modal fade" id="firstLoginModal" aria-labelledby="firstLoginModalLabel">
+{#            tabindex="-1" role="dialog"#}
               <div class="modal-dialog">
                 <div class="modal-content">
                   <div class="modal-header">
                     <h5 class="modal-title" id="firstLoginModalLabel">Login Required</h5>
                     <button id="closePopup" type="button" class="close" data-dismiss="modal" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
+                      <span>&times;</span>
                     </button>
                   </div>
                   <div class="modal-body">
@@ -117,6 +126,7 @@
                 </div>
               </div>
             </div>
+            {% endif %}
         </form>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
