--- a/templates/index.html
+++ b/templates/index.html
@@ -128,6 +128,9 @@
             </div>
             {% endif %}
         </form>
+        <div class="m-3">
+            <div>{{ text_read }}</div>
+        </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
